tests/ui/generic-const-items/assoc-const-missing-type.stderr
error[E0308]: mismatched types
  --> $DIR/assoc-const-missing-type.rs:11:18
   |
LL |     const K<T> = ();
   |             -    ^^ expected type parameter `T`, found `()`
   |             |
   |             expected this type parameter
   |
   = note: expected type parameter `T`
                   found unit type `()`

error: missing type for `const` item
  --> $DIR/assoc-const-missing-type.rs:11:15
   |
LL |     const K<T> = ();
   |               ^ help: provide a type for the associated constant: `()`

error[E0308]: mismatched types
  --> $DIR/assoc-const-missing-type.rs:11:18
   |
LL |     const K<T> = ();
   |             -    ^^ expected type parameter `T`, found `()`
   |             |
   |             expected this type parameter
   |
   = note: expected type parameter `T`
                   found unit type `()`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
